Product bundle: Shipping cost calculation on bundle item level (can be set by merchant). Replaced (nearly) all direct access to (raw) cart items by encapsulated code.

--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/BundleItemAddPopup.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/BundleItemAddPopup.cshtml
@@ -24,6 +24,11 @@
 		@Html.Raw(T("Admin.Catalog.Products.BundleItems.AdminNoteGeneral"))
 
 		@Html.Raw(T("Admin.Catalog.Products.BundleItems." + (Model.IsPerItemPricing ? "AdminNotePerItemPricing" : "AdminNoteBundlePricing")))
+
+		@if (Model.IsPerItemShipping)
+		{
+			@Html.Raw(T("Admin.Catalog.Products.BundleItems.AdminNotePerItemShipping"))
+		}
 	</div>
 
     if (ViewBag.RefreshPage == true)
