--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -1243,6 +1243,10 @@ table.cart .cart-item-row .qty-input {
 /* FEATURED PRODUCTS */
 .featured-product-grid {
 	margin-bottom: 20px;
+
+	.section-title {
+		margin-bottom: 6px;
+	}
 }
 
 /* CATALOG PAGES */
@@ -2065,6 +2069,11 @@ table.cart .cart-item-row .qty-input {
 		.base-price {
 			font-size: 0.85em;
 		}
+	}
+
+	.bundle-item-attribute-info {
+		font-size: 0.85em;
+		line-height: 1.45em;
 	}
 
 	.bundle-item-footer {
