--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBundleItems.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBundleItems.cshtml
@@ -70,6 +70,13 @@
 					</div>
 				</div>
 			}
+			
+			@if (item.AttributeInfo.HasValue())
+			{
+				<div class="bundle-item-attribute-info muted">
+					@Html.Raw(item.AttributeInfo)
+				</div>
+			}
 		</div>
 
 		@if (item.ProductVariantAttributes.ShouldBeRendered())
