--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.cshtml
@@ -76,7 +76,7 @@
                             </td>
                         }
                         <td class="product">
-                            <a href="@Url.RouteUrl("Product", new { SeName = item.ProductSeName })" title="View details">@item.ProductName</a>
+                            <a href="@Url.RouteUrl("Product", new { SeName = item.ProductSeName })" title="@T("Products.Details")">@item.ProductName</a>
 
                             <!-- delivery time -->
                             @if (Model.DisplayShortDesc && !String.IsNullOrEmpty(item.ShortDesc))
