Product bundle: Cart shows bundle items indented below the bundle product

--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Media.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Media.cshtml
@@ -155,6 +155,15 @@
         </tr>
         <tr>
             <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.CartThumbBundleItemPictureSize)
+            </td>
+            <td class="adminData">
+                @Html.SettingEditorFor(model => model.CartThumbBundleItemPictureSize)
+                @Html.ValidationMessageFor(model => model.CartThumbBundleItemPictureSize)
+            </td>
+        </tr>
+        <tr>
+            <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.MiniCartThumbPictureSize)
             </td>
             <td class="adminData">
