--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/ShoppingCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/ShoppingCart.cshtml
@@ -106,11 +106,29 @@
         </tr>
         <tr>
             <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.ShowProductBundleImagesOnShoppingCart)
+            </td>
+            <td class="adminData">
+                @Html.SettingEditorFor(model => model.ShowProductBundleImagesOnShoppingCart)
+                @Html.ValidationMessageFor(model => model.ShowProductBundleImagesOnShoppingCart)
+            </td>
+        </tr>
+        <tr>
+            <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.ShowProductImagesOnWishList)
             </td>
             <td class="adminData">
                 @Html.SettingEditorFor(model => model.ShowProductImagesOnWishList)
                 @Html.ValidationMessageFor(model => model.ShowProductImagesOnWishList)
+            </td>
+        </tr>
+        <tr>
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.ShowProductBundleImagesOnWishList)
+            </td>
+            <td class="adminData">
+                @Html.SettingEditorFor(model => model.ShowProductBundleImagesOnWishList)
+                @Html.ValidationMessageFor(model => model.ShowProductBundleImagesOnWishList)
             </td>
         </tr>
         <tr>
