Product bundle: Wishlist shows bundle items indented below the bundle product

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -821,7 +821,7 @@ table.cart .unit-price {
 table.cart .cart-item-row td.remove,
 table.cart .cart-item-row td.addtocart {
 	text-align: center;
-	vertical-align: middle;
+	vertical-align: top;
 }
 
 table.cart .cart-item-row td.productpicture img {
@@ -861,6 +861,7 @@ table.cart .cart-item-bundle-row td {
 	.bundle-item-attribute-info {
 		font-size: 0.85em;
 		line-height: 1.45em;
+		margin-top: 2px;
 	}
 }
 
