--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.cshtml
@@ -3,7 +3,7 @@
 @using SmartStore.Core.Domain.Catalog;
 @using SmartStore.Web.Models.ShoppingCart;
 
-@helper SimpleItem(ShoppingCartModel.ShoppingCartItemModel item)
+@helper SimpleProduct(ShoppingCartModel.ShoppingCartItemModel item)
 {
     <tr class="cart-item-row">
 		@if (Model.IsEditable)
@@ -107,13 +107,13 @@
 	</tr>
 }
 
-@helper BundleItems(ShoppingCartModel.ShoppingCartItemModel parentItem)
+@helper BundleProducts(ShoppingCartModel.ShoppingCartItemModel parentItem)
 {
 	if (parentItem.ChildItems != null)
 	{	
 		foreach (var item in parentItem.ChildItems.OrderBy(x => x.BundleItem.DisplayOrder))
 		{
-			<tr class="cart-item-bundle-row">
+			<tr class="product-bundle-row">
 				@if (Model.IsEditable)
 				{
 					<td>&nbsp;</td>
@@ -131,7 +131,10 @@
 						@if (Model.ShowProductBundleImages)
 						{
 							<div class="bundle-item-image" style="@("min-width: {0}px; min-height: {0}px;".FormatWith(Model.BundleThumbSize + 10))">
-								<img class="img-polaroid" src="@item.Picture.ImageUrl" alt="@item.Picture.AlternateText" title="@item.Picture.Title" />
+								@if (!item.BundleItem.HideThumbnail)
+								{
+									<img class="img-polaroid" src="@item.Picture.ImageUrl" alt="@item.Picture.AlternateText" title="@item.Picture.Title" />
+								}
 							</div>
 						}						
 						<div class="bundle-item-body">
@@ -216,7 +219,7 @@
 		@*we add enctype = "multipart/form-data" because "File upload" attribute control type requries it*@
 		using (Html.BeginRouteForm("ShoppingCart", FormMethod.Post, new { enctype = "multipart/form-data" }))
 		{
-		<table class="cart table">
+		<table class="cart table table-order-products">
 			<thead>
 				<tr class="cart-header-row">
 					@if (Model.IsEditable)
@@ -254,15 +257,15 @@
 				{
 					if (item.ProductType == ProductType.BundledProduct)
 					{
-						<tbody class="cart-body cart-body-bundle">
-							@SimpleItem(item)
-							@BundleItems(item)
+						<tbody class="product-body product-body-bundle">
+							@SimpleProduct(item)
+							@BundleProducts(item)
 						</tbody>
 					}
 					else
 					{
-						<tbody class="cart-body cart-body-simple">
-							@SimpleItem(item)
+						<tbody class="product-body product-body-simple">
+							@SimpleProduct(item)
 						</tbody>
 					}
 				}
