Product bundle: Order details in backend now shows bundle item data in product tab

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -1024,6 +1024,22 @@ table.order-edit td {
     border: medium none;
 	.smaller();
 }
+
+.bundle-items-container {
+	padding: 10px 0 0 80px;
+
+	.bundle-item {
+		margin-top: 5px;
+	}
+
+	.bundle-item-attribute-info {
+		font-size: 0.85em;
+		line-height: 1.45em;
+		margin-top: 2px;
+	}
+}
+
+
 /* WARNINGS */
 .system-warnings ul {
     padding-left: 5px;
