Product bundle: Reorder an order required an update

--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.cshtml
@@ -358,6 +358,8 @@
 	}
 	else
 	{
-		@T("ShoppingCart.CartIsEmpty")
+		<div class="alert alert-info fade in">
+			@T("ShoppingCart.CartIsEmpty")
+		</div>
 	}
 </div>
