--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/Wishlist.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/Wishlist.cshtml
@@ -324,7 +324,9 @@
             }
             else
             {
-                @T("Wishlist.CartIsEmpty")
+				<div class="alert alert-info fade in">
+					@T("Wishlist.CartIsEmpty")
+				</div>
             }
         </div>
 
