--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/BundleItemAddPopup.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/BundleItemAddPopup.cshtml
@@ -18,7 +18,7 @@
         </div>
     </div>
 	
-	<div class="alert alert-success fade in">
+	<div class="alert alert-info fade in">
 		<button class="close" data-dismiss="alert">&#215;</button>
 
 		@Html.Raw(T("Admin.Catalog.Products.BundleItems.AdminNoteGeneral"))
