Product bundle: Selecting an attribute of a bundle or associated item updates its thumbnail on the product detail page

--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBundleItems.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBundleItems.cshtml
@@ -10,7 +10,7 @@
 
 		@if (item.DetailsPictureModel.DefaultPictureModel.ImageUrl.HasValue() && !item.BundleItem.HideThumbnail)
 		{
-			<div class="bundle-item-image" style="min-width: @(item.ThumbDimensions)px; min-height: @(item.ThumbDimensions)px;">
+			<div class="bundle-item-image dynamic-image" style="min-width: @(item.ThumbDimensions)px; min-height: @(item.ThumbDimensions)px;">
 				<img src="@item.DetailsPictureModel.DefaultPictureModel.ImageUrl" alt="@item.DetailsPictureModel.AlternateText" title="@item.DetailsPictureModel.DefaultPictureModel.Title" />
 			</div>
 		}
