--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductTemplate.Grouped.AssociatedProduct.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductTemplate.Grouped.AssociatedProduct.cshtml
@@ -8,7 +8,7 @@
 	<div class="clearfix">
 		@if (!String.IsNullOrWhiteSpace(Model.DetailsPictureModel.DefaultPictureModel.ImageUrl))
 		{
-			<div class="variant-picture equalized-column" data-equalized-column-name="pd">
+			<div class="variant-picture dynamic-image equalized-column" data-equalized-column-name="pd">
 				<img alt="@Model.DetailsPictureModel.AlternateText" src="@Model.DetailsPictureModel.DefaultPictureModel.ImageUrl"
 					 title="@Model.DetailsPictureModel.DefaultPictureModel.Title" />
 			</div>
