--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/ShipmentDetails.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/ShipmentDetails.cshtml
@@ -100,8 +100,9 @@
                         {
                             <tr>
                                 <td style="width: 70%;">
-                                    <div style="padding-left: 10px; padding-right: 10px; text-align: left;">
-                                        <em><a href="@Url.Action("Edit", "Product", new { id = item.ProductId })">@item.ProductName</a></em>
+                                    <div>
+										@Html.LabeledProductName(item.ProductId, item.ProductName, item.ProductTypeName, item.ProductTypeLabelHint)
+										
                                         @if (!String.IsNullOrEmpty(item.AttributeInfo))
                                         {
                                             <br />
@@ -110,7 +111,7 @@
                                     </div>
                                 </td>
                                 <td style="width: 15%;">
-                                    <div style="padding-left: 10px; padding-right: 10px; text-align: left;">
+                                    <div>
                                         @item.Sku
                                     </div>
                                 </td>
